[gd_scene load_steps=6 format=3 uid="uid://cjf3r43ggyfs"]

[ext_resource type="Script" path="res://combat_scene.gd" id="1_vor2b"]
[ext_resource type="Texture2D" uid="uid://bjujtd1i53mt3" path="res://assets/table-background.jpg" id="2_dildo"]
[ext_resource type="PackedScene" uid="uid://co24ufbs8g3pc" path="res://ui/player_stats_ui.tscn" id="3_l7flj"]
[ext_resource type="PackedScene" uid="uid://d4jhhllblwlj" path="res://ui/combat_log.tscn" id="4_8a6i1"]
[ext_resource type="PackedScene" uid="uid://c15q3vixo7lx0" path="res://ui/draw_pile_ui.tscn" id="5_2bxfb"]

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_vor2b")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
texture = ExtResource("2_dildo")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="ViewCardsButton" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "View Cards"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="DrawPileUIP2" parent="TextureRect/VBoxContainer/HBoxContainer" instance=ExtResource("5_2bxfb")]
unique_name_in_owner = true
layout_mode = 2

[node name="RunHBoxP2" type="HBoxContainer" parent="TextureRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1100, 280)
layout_mode = 2
size_flags_horizontal = 3

[node name="DummyCarrySpacerP2" type="Control" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Player2StatsUI" parent="TextureRect/VBoxContainer/HBoxContainer2" instance=ExtResource("3_l7flj")]
unique_name_in_owner = true
layout_mode = 2

[node name="CombatLog" parent="TextureRect/VBoxContainer/HBoxContainer2" instance=ExtResource("4_8a6i1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Player1StatsUI" parent="TextureRect/VBoxContainer/HBoxContainer2" instance=ExtResource("3_l7flj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="DummyCarrySpacerP1" type="Control" parent="TextureRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2

[node name="RunHBoxP1" type="HBoxContainer" parent="TextureRect/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1100, 280)
layout_mode = 2
size_flags_horizontal = 3

[node name="DrawPileUIP1" parent="TextureRect/VBoxContainer/HBoxContainer3" instance=ExtResource("5_2bxfb")]
unique_name_in_owner = true
layout_mode = 2

[node name="Background" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.404511, 0.404511, 0.404511, 1)
texture = ExtResource("2_dildo")
centered = false

[node name="CombatUI" type="CanvasLayer" parent="."]

[node name="DrawButton" type="Button" parent="CombatUI"]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.844
anchor_top = 0.5
anchor_right = 0.844
anchor_bottom = 0.5
offset_left = -189.48
offset_top = -88.0
offset_right = 6.5199
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 36
text = "Draw"

[node name="EndTurnButton" type="Button" parent="CombatUI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 491.0
offset_top = -17.0
offset_right = 655.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "End Turn"

[node name="MenuUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
